--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ Mail: Iftach Haitner, Tel Aviv university, P.O.B. 39040, Ramat Aviv, Tel Aviv 69
 
 <div class="bio top">
 <h2>Short Biography </h2>
-I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
+I am a faculty  member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.<br>
 I am a member at the <a href="http://www.icore-algo.org.il/">Israeli
 Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
-Information Security.</a><br>
+Information Security</a>.<br>
 Until July 2010, I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 Research New England</a>. Prior to the time at Microsoft
 Research, I did a six months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department of
@@ -98,16 +98,19 @@ Computer Science, University of Haifa</font></a>, hosted by
 <a href="http://cs.haifa.ac.il/%7Eronen/"> Ronen
 shaltiel</a>.
 I received my PhD in 2008 from the <a href="http://www.wisdom.weizmann.ac.il/">Faculty of
-Mathematics and Computer Science, Weizmann Institute of Science,</a>  under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer
-Reingold</a> I got my Master's degree also
+Mathematics and Computer Science, Weizmann Institute of Science</a>,  under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold/">Omer
+Reingold</a>. I got my Master's degree also
 from the Weizmann Institute, under the supervision of <a href="http://www.wisdom.weizmann.ac.il/%7Eoded/">Oded
 Goldreich</a>, and did my undergraduate studies (Mathematics and
 Computer Science) at <a href="http://www.tau.ac.il/">Tel-Aviv
-university</a><br><br>
+university</a>.<br><br>
 
 
 <b>Awards and Fellowships</b><br>
 <ul>
+
+<li> [2014] The annual fruits of the Raymond and Beverly Sackler Career Development Chair, awarded by the Faculty
+of Exact Sciences, Tel Aviv University, in recognition of academic excellence. </li>
 <li>[2011] One of the three winning papers of the 2011 SIAM Outstanding  Paper Prizes.<br>
 The prizes are given for outstanding papers published in SIAM journals during the three years prior to the year of the award. </li>
 <li> [2008] The John F. Kennedy Prize (awarded by the  Weizmann Institute) </li>
