--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <ul>
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Seminars/AvgHardness/Spring15.html"> Average-Case Hardness (student seminar)&nbsp; (Spring 15)</a></li>
   <li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall 14)</a></li>
-  <li><a href="http://tau-cm2014.wikidot.com/">Computational Model (Spring 14)</a></li>
+  <li><a href="http://tau-cm2015b.wikidot.com/">Computational Model (Spring 15)</a></li>
   <li><a  href="Courses/FOC/Spring14/index.html" >Foundation  of Cryptography (Spring 14)</a></li>
 </ul></div>
 
