--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -49,7 +49,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 1 </td> <td> 10/3 </td> <td> Ethan Grundstein </td> <td> Introduction <br> <i>Section 1</i> </td>     
+    <td> 1 </td> <td> 10/3 </td> <td> Etan Grundstein </td> <td> Introduction <br> <i>Section 1</i> </td>     
  </tr>
 
 
@@ -78,12 +78,12 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
    
-	<td> 6 </td> <td>  5/5  </td> <td> ? </td> <td> Decision Versus Search and One-Way Functions <br> <i>Section 4</i> </td>    
+	<td> 6 </td> <td>  5/5  </td> <td> Or danon and Eliraz Levi </td> <td> Decision Versus Search and One-Way Functions <br> <i>Section 4</i> </td>    
  </tr>
 
  
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 7 </td> <td>   12/5  </td> <td> Tel Keng </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
+    <td> 7 </td> <td>   12/5  </td> <td> Tal Kligman </td> <td> Samplable Ensembles <br> <i>Section 5</i> </td>        
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
@@ -91,12 +91,12 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
-    <td> 9 </td> <td> 26/5 </td> <td> ? </td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
+    <td> 9 </td> <td> 26/5 </td> <td> Guy Braude</td> <td> <a href=http://www.cs.cmu.edu/~odonnell/papers/hardness.pdf>Hardness amplification within NP</a>  <br>  <i> Paper by Ryan O'Donnell</i>
 </td>     
  </tr>
  
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 10 </td> <td> 2/6 </td> <td> ? </td> <td> Worst-Case Versus Average-Case and Cryptography (without proof of Thm. 7.5)<br> <i>Section 7</i></td>     
+    <td> 10 </td> <td> 2/6 </td> <td> Uri Sharir</td> <td> Worst-Case Versus Average-Case and Cryptography (without proof of Thm. 7.5)<br> <i>Section 7</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
@@ -105,7 +105,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
  
 <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-     <td> 12</td> <td> 16/6   </td> <td> ? </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
+     <td> 12</td> <td> 16/6   </td> <td> Gal Rotem </td> <td> <a href=http://www.liafa.univ-paris-diderot.fr/~dxiao/docs/satcheck.pdf>On the Power of Randomized Reductions and  the Checkability of
 SAT</a> 
 	 <br>  <i> Paper by  Mohammad Mahmoody and David Xia</i>
  </td>    
