--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ and <a href="http://www.wisdom.weizmann.ac.il/%7Egils/">Gil Segev</a><br>
 <strong>Finding Collisions in Interactive Protocols — Tight Lower Bounds on the Round Complexity and Communication Complexityof Statistically Hiding Commitments </strong>
 <br>
 <span class=abslide>[abstract]</span><br>
-SIAM Journal of Computing 2015, to appear<br>
+SIAM Journal of Computing 2015 <a  href="http://epubs.siam.org/doi/abs/10.1137/130938438">[link]</a><br>
 
 Draft of full version <a href="papers/FindingCollisions/FindingCollisions_Joint.pdf"> [pdf]</a>  <img src="up.png" class=update1>
 </p>
