--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -87,7 +87,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(149,179,215) 0% 50%">
-    <td> 8 </td> <td> 19/5 </td> <td>?</td> <td>  Hardness Amplification   <br> <i>Section 6</i></td>     
+    <td> 8 </td> <td> 19/5 </td> <td>Kineret Segal</td> <td>  Hardness Amplification   <br> <i>Section 6</i></td>     
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">
