--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -100,7 +100,7 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
  </tr>
 
  <tr  style= "BACKGROUND: rgb(250,191,143) 0% 50%">    
-	 <td> 11 </td> <td> 9/6 </td> <td> ? </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
+	 <td> 11 </td> <td> 9/6 </td> <td> Tzion Sasson </td> <td> <a href=http://dimacs.rutgers.edu/~adib/pubs/redux-sicomp.pdf>On Worst-Case to Average-Case Reductions for NP Problems</a>  <br>  <i> Paper by Andrej Bogdanov and Luca Trevisan</i>
 </td>   
  </tr>
  
@@ -113,7 +113,7 @@ SAT</a>
  
  <tr  style= "BACKGROUND: #FF00FF 0% 50%">
 	 <td> 13</td> <td>  21/6 <br>
-<b>Sunday</b>	 </td> <td> ? </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
+<b>Sunday</b>	 </td> <td> Coral Grichner </td> <td> <a href=http://www.cs.tau.ac.il/~amnon/Papers/GST.CCC07.pdf>If NP Languages Are Hare On The
 Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper by  Dan Gutfreund, Ronen Shaltiel, and Amnon Ta-Shma </i>
 </td>    
  </tr>
