--- a/Courses/Seminars/AvgHardness/Spring15.html
+++ b/Courses/Seminars/AvgHardness/Spring15.html
@@ -132,6 +132,9 @@ Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper
   <li> Sanjeev Arora and Boaz Barak <a href="https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
 
   <li> Oded Goldreich <a href="http://www.wisdom.weizmann.ac.il/~oded/cc-book.html">Computational Complexity: A Conceptual Perspective.</a> </li>
+  
+  <li> Valentine Kabanets  <a href="http://www2.cs.sfu.ca/~kabanets/881">Course on Average-Case Complexity.</a> </li>
+  
   </ul> 
   <br><br> 
 
