--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ homomorphic encryption.
 <p>
 Iftach Haitner,   <a href="http://www.wisdom.weizmann.ac.il/%7Ereingold">Omer Reingold</a> and <a href="http://www.eecs.harvard.edu/%7Esalil/">Salil Vadhan</a><br>
 <b>Efficiency Improvements in Constructing Pseudorandom Generators from One-way Functions</b><br>
-<span class=abslide>[abstract]</span><br>
+<span class=abslide>[abstract]</span> <a href="papers/HillRevisted/HillRevisted_Full.pptx">[slides]</a> <br><br>
 
 SIAM Journal of Computing 2013    <a  href="http://epubs.siam.org/doi/abs/10.1137/100814421">[link]</a><br>
 Annual ACM Symposium on Theory of Computing (STOC), 2010  <a href="papers/HillRevisted/HillRevisted_STOC.pdf">[pdf]</a><br>
