--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 <li>
 <p>
 Iftach Haitner and  <a href="http://www.cs.technion.ac.il/%7Eyuvali/">Yuval Ishai</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and and  <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
-<strong>Lower Bounds for Secure Multiparty Computation Without Broadcast </strong>  <img src="new.png" class=update1><br>
+<strong>Parallel Hashing via List Recoverability</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span><br>
 Crypto 2015<br>
 </p>
