--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 Iftach Haitner and  <a href="http://www.cs.technion.ac.il/%7Eyuvali/">Yuval Ishai</a> and <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and and  <a href="http://www.cs.haifa.ac.il/%7Eronen/">Ronen Shaltiel</a><br>
 <strong>Parallel Hashing via List Recoverability</strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span><br>
-Crypto 2015<br>
+Crypto 2015  <a href="papers/CRHDomainExtension/CRH_Crypto.pdf">[pdf]</a><br>
 </p>
 
 
