--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@ symmetric functionalities, can be securely computed without broadcast. Our proof
 <a href="http://www.cs.tau.ac.il/%7Eitayberm/">Itay Berman</a> and Iftach Haitner and  <a href="http://cs.nyu.edu/%7Etentes/Homepage.html">Aris Tentes</a><br>
 <strong>Coin Flipping of Any Constant Bias Implies One-Way Functions </strong> <br>
 <span class=abslide>[abstract]</span>&nbsp<a href="papers/TightCF/TightCoinFlipping_full.ppsx">[slides]</a><br>
-STOC 2014 <a href="papers/TightCF/TightCoingFlipping_CR.pdf">[pdf]</a>
+STOC 2014 <a href="papers/TightCF/TightCoingFlipping_CR.pdf">[pdf]</a><br>
+Draft of full version <a href="papers/TightCF/MPCNoBroadcast.pdf">[pdf]</a>  <img src="up.png" class=update1>
 </p>
 
 
@@ -355,7 +356,7 @@ Iftach Haitner and Eliad Tsfadia <br>
 <strong>An Almost-Optimally Fair Three-Party Coin-Flipping Protocol</strong><br>
 <span class=abslide>[abstract]</span> <a href="papers/3PartyCF/3Party-full.ppsx">[slides]</a> <br>
 STOC 2014 <a href="papers/3PartyCF/QuasiOptimalCF_CR.pdf">[pdf]</a><br>
-Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <img src="new.png" class=update1>
+Draft of dull version <a href="papers/3PartyCF/QuasiOptimalCF_Full.pdf">[pdf]</a> <img src="up.png" class=update1>
 
 
 
