--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Other</b>
 <ul>
-<li>General co-chair of <a href="http://crypto.biu.ac.il/winterschool2014/">Theory of  Cryptography Conference (TCC) 2016</a></li>
+<li>General co-chair of <a href="http://www.cs.tau.ac.il/conferences/tcc2016/">Theory of  Cryptography Conference (TCC) 2016-A</a></li>
 </ul>
 
 </div>
@@ -317,7 +317,7 @@ Our construction makes use of <em>list-recoverable codes</em>, a generalization 
 
 <li>
 <p>
-<a href="http://u.cs.biu.ac.il/~cohenrb/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a> <br>
+<a href="http://u.cs.biu.ac.il/~cohenrb/">Ran Cohen</a> and Iftach Haitner and  <a href="http://omrier.wix.com/eran-omri">Eran Omri</a>  and Lior Rotem<br>
 <strong>Characterization of Secure Multiparty Computation Without Broadcast </strong>  <img src="new.png" class=update1><br>
 <span class=abslide>[abstract]</span><br>
 Manuscript 2015<br>
