--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -2,28 +2,33 @@
 <html>
 <head>
  <meta charset=utf-8">
- <title>Seminar on Average-Case Complexity</title> 
+ <title>Seminar on  Zero Knowledge Proofs </title> 
  <style>td{text-align:center;padding:5px} </style>
 </head>
 
 <body style = "padding-left:40px; font-size:120%">
 
 
-<h1><span style="FONT-SIZE: 26pt">Seminar on Average-Case Complexity<br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
+<h1><span style="FONT-SIZE: 26pt">Seminar on  Zero Knowledge Proofs <br> </span>  <span style="FONT-SIZE: 18pt">Id: 0368-4152-01</span></h1> 
+
 
 <img alt="" height="334" src="naranjas.jpg" width="500"><br>
                                                             
 <h2 style="FONT-SIZE: 20pt"><a href="http://www.cs.tau.ac.il/%7Eiftachh/">Iftach Haitner</a></h2>
 
 
-<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: Schriber 008 </span> <br><br><br>
+<span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: ?? </span> <br><br><br>
                                                                                               
 
+Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest
 
-The first part of the seminar we will follow the <a href="http://www.cse.cuhk.edu.hk/~andrejb/pubs/average-now.pdf">survey</a> by Andrej Bogdanov and Luca Trevisan, and then move to more 
+
+The the seminar we will follow the <a href="http://people.seas.harvard.edu/~salil/research/phdthesis-abs.html">survey</a> by Salil Vadhan, and then )move to more 
 	recent results<br><br>
 
 	In each meeting one student will cover a single topic as listed below. <br><br>
+	
+<h2>Undergrad studetns</h2>	 Third year students who are <b> willing to work hard</b>, are welcome to join the seminar, but please consult me via email before registering.
 
 <h2>Prerequisites</h2>
 This is an advanced seminar, so background in the theory of computation (Algorithm, Computability, Complexity) is required. Students with particularly strong math background
@@ -40,6 +45,9 @@ In addition, the speakers of the week will have to give me a <strong>practice ta
 <br> <br>
 <h2>Topics and schedule</h2> 
 
+Not set yet.
+
+<!--
 <table  border=1 style="BORDER-BOTTOM: medium none; BORDER-LEFT: medium none; BORDER-COLLAPSE:
  collapse; BORDER-TOP: medium none; BORDER-RIGHT: medium none" border="1" cellpadding="0" cellspacing="0">
  <tbody>
@@ -121,12 +129,13 @@ Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper
  
 </tbody>
 </table>
-
+ -->
 
 <br><br> 
 
-
+<!--
 <h2> Additional Reading</h2>
+
 
 <ul> 
   <li> Sanjeev Arora and Boaz Barak <a href="https://www.cs.princeton.edu/theory/complexity">Computational Complexity: A Modern Approach.</a> </li>
@@ -138,5 +147,7 @@ Worst-Case,<br>Then It Is Easy to Find Their Hard Instances</a>  <br>  <i> Paper
   </ul> 
   <br><br> 
 
+  -->
+  
   </body>
 </html>
