--- a/Courses/Seminars/ZK/Spring16.html
+++ b/Courses/Seminars/ZK/Spring16.html
@@ -20,7 +20,7 @@
 <span style="FONT-SIZE: 20pt"> Tuesdays: 10:00-12:00,  Room: ?? </span> <br><br><br>
                                                                                               
 
-Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest
+Zero-knowledge interactive proofs are fascinating constructs which enable one party (the "prover") to convince another party (the "verifier") of an assertion (.e.g., a mathematical theorem) , with the property that the verifier learns nothing other than the fact that the assertion being proven is true. In addition to being powerful tools for constructing secure cryptographic protocols, zero-knowledge proofs yield rich classes of computational problems that are of both complexity-theoretic and cryptographic interest<br><br>
 
 
 The the seminar we will follow the <a href="http://people.seas.harvard.edu/~salil/research/phdthesis-abs.html">survey</a> by Salil Vadhan, and then )move to more 
