--- a/Courses/Info/Fall15/prerequisite.html
+++ b/Courses/Info/Fall15/prerequisite.html
@@ -21,6 +21,7 @@
 <script>document.write(menu)</script>
  <div id=content>
 <h1>Prerequisite   </h1>
+Prerequisite: Basic probability and calculus. </br>
 
 Course is open for all graduate CS and Math studetns. All other students should contanct me before registering.
 
