--- a/Courses/Info/Fall15/index.html
+++ b/Courses/Info/Fall15/index.html
@@ -42,10 +42,9 @@
 
 <b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
 
-<p><b>Abstract:</b> .       </p>
- <b> <br />
-	 <br />
-	 <span class="auto-style1">Announcements</span></b> 
+
+	 <br/><br/>
+	 <span class="auto-style1">Announcements:</span></b> 
 
 </div>
 	</div>
