--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -53,7 +53,7 @@
  <div class=content>
 <h1>  Schedule and Slides  </h1>
 
-Lecture topics is not final, and links of future talks will remain broken until  (hoefully) the night before the talk. 
+Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> last year course</a> and is not final. Links of future talks will remain broken until (hoefully) the night before the talk. 
 
 </br>
 
