--- a/Courses/Info/Fall15/readings.html
+++ b/Courses/Info/Fall15/readings.html
@@ -20,25 +20,27 @@
 <div style="text-align : left ; width :900px" >
 <script>document.write(menu)</script>
  <div id=content>
-<h1>Readings</h1>
+<h1>Additional Reading</h1>
 
 
 
 		</ol>
 
-
-
-		  You may find the following to be useful references (but beware that
-
-		some of the notation, conventions, and definitions may differ slightly
-
-		from lecture):<br /><br />
-
-
-<b>Last year course: </b>
-		<li><a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall 14)</a></li>
+      
+	  
+	  <b>Last year course: </b>
+		<a href="http://www.cs.tau.ac.il/%7Eiftachh/Courses/Info/Fall14/index.html"> Applications of Information Theory&nbsp; (Fall 14)</a><br>
 		
-	<br>	
+	<br>	<br />
+	
+
+
+		  You may find  the following reading to be useful references, but beware that
+
+		some of the notation, conventions, and definitions migth be slightly differ.<br /><br />
+
+
+
 		<b>Books: </b>
 
 		<li >Thomas M. Cover, Joy A. Thomas .&nbsp; <i>
@@ -47,6 +49,8 @@
 
 			</li>
 <br>
+		
+		
 		<b>Papers: </b>
           
 		<li >Jaikumar Radhakrishnan.&nbsp; <i>
@@ -55,11 +59,7 @@
 
 			</li>
 			
-		<li >Thomas Holenstein.&nbsp; <i>
-
-			<a href="theoryofcomputing.org/articles/v005a008/v005a008.pdf">Parallel Repetition: Simplifications and the No-Signaling Case</a>. </i><br>
-
-		</li>	
+		
 
 
 
