--- a/Courses/Info/Fall15/requirements.html
+++ b/Courses/Info/Fall15/requirements.html
@@ -31,7 +31,7 @@ Late submissions will be ignored unless approved  <strong>first</strong> by me.<
 
      Writing your solution using Latex is recommended. For newcomers to Latex,&nbsp;
       <ul>
-  <li><a href="http://texniccenter.org/" target="_blank">http://texniccenter.org/</a> is a  decent open-source developing environment. Alternatively, you can try the "WYSIWYG" editor  <a href="http://www.lyx.org/Download" target="_blank">Lyx</a>.</li>
+  <li><a href="http://www.texstudio.org/" target="_blank">TeXstudio</a> is an excelent open-source developing environment. Alternatively, you can try the "WYSIWYG" editor  <a href="http://www.lyx.org/Download" target="_blank">Lyx</a>.</li>
   <li>"<a href="http://ftp.cc.uoc.gr/mirrors/CTAN/info/lshort/english/lshort.pdf" target="_blank">The not so short introduction to Latex</a>" is a good introductionary text.</li>
   <li>See <a href="HandoutExample">example</a></li>
 </ul>
