--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -68,8 +68,7 @@ Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/%7Eiftachh/Course
 <tr>
 <td style="width: 7%">1</td>
 <td style="width: 14%">October 20 </td>
-<td>Introduction: Administrativia and course topics [<a href="Slides/Introduction_admin_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
+<td>Introduction: Administrativia and course topics [<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
 Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
 </tr>
