--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ Complexity.<br></p>
 <span class=boxtop id=bio>[Short Bio]</span>
 <span class=boxtop id=pro>[Professional Activity]</span>
 <span class=boxtop id=teach>[Teaching]</span>  
-<span class=boxtop id=edu>[School Activity]</span>
-<span class=boxtop id=postdocs>[Postdocs and Interns]</span>
+<span class=boxtop id=edu>[School Activity]</span></br>
+<span class=boxtop id=postdocs>[Call for Postdocs & Interns]</span>
 
 
 <div class="info top">
