--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -69,15 +69,13 @@ Lecture topics is taken from  <a href="http://www.cs.tau.ac.il/%7Eiftachh/Course
 <td style="width: 7%">1</td>
 <td style="width: 14%">October 20 </td>
 <td>Introduction: Administrativia and course topics [<a href="Printouts/Introduction_admin_h.pdf" target="_blank">PO</a>] and <br />
-Basic Definitions and Facts [<a href="Slides/Lesson1_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
+Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">2</td>
 <td style="width: 14%">October 27</td>
-<td class="auto-style4">Joint &amp; Conditional Entropy, Mutual Information [<a href="Slides/Lesson2_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson2_h.pdf" target="_blank">PO</a>] </td>
+<td class="auto-style4">Joint &amp; Conditional Entropy, Mutual Information [<a href="Printouts/Lesson2_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
