--- a/Courses/Info/Fall15/sets.html
+++ b/Courses/Info/Fall15/sets.html
@@ -22,6 +22,7 @@
  <div id=content>
 <h1>Probelm Sets</h1>
 	 <ol>
+		 <li><a href="ProblemSets/PS1.pdf">Problem set 1</a>. Due date November 10.</li>
 		 
 	 </ol>
 
