--- a/Courses/Info/Fall15/index.html
+++ b/Courses/Info/Fall15/index.html
@@ -40,6 +40,12 @@
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
+
+<b>Grader:</b> Gal Rotem,  email: firstname.lastname1 at gmail.com. mailbox: Schreiber  #315 (third floor)<br /><br />
+
+
+
+
 <b>Reception:</b> Sundays 9:00-10:00 (please coordinate via email)<br />
 
 
