--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -81,8 +81,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">November 3</td>
-<td>Graph Covering, Differential Entropy [<a href="Slides/Lesson3_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>] </td>
+<td>Graph Covering, Differential Entropy [<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
