--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -87,8 +87,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">4</td>
 <td style="width: 14%">November 10</td>
-<td>AEP, Data Compression and  Gambling [<a href="Slides/Lesson4_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson4_h.pdf" target="_blank">PO</a>] </td>
+<td>AEP, Data Compression and  Gambling [<a href="Printouts/Lesson4_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
