--- a/Courses/Info/Fall15/sets.html
+++ b/Courses/Info/Fall15/sets.html
@@ -24,6 +24,8 @@
 	 <ol>
 		 <li><a href="ProblemSets/PS1.pdf">Problem set 1</a>. Due date November 10.</li>
 		 
+		 <li><a href="ProblemSets/PS2.pdf">Problem set 2</a>. Due date November 24.</li>
+		 
 	 </ol>
 
 
