--- a/Courses/Info/Fall15/index.html
+++ b/Courses/Info/Fall15/index.html
@@ -41,7 +41,7 @@
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
 
-<b>Grader:</b> Gal Rotem,  email: firstname.lastname1 at gmail.com. mailbox: Schreiber  #315 (third floor)<br /><br />
+<b>Grader:</b> Omer Rotem,  email: firstname.lastname1 at gmail.com. mailbox: Schreiber  #315 (second floor)<br /><br />
 
 
 
