--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -81,7 +81,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">November 3</td>
-<td>Graph Covering, Differential Entropy [<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>  (the differential entropy part will be given in a later class)] </td>
+<td>Graph Covering  [<a href="Printouts/Lesson3_h.pdf" target="_blank">PO</a>  (the differential entropy part will be given in a later class)] </td>
 </tr>
 
 <tr>
@@ -93,14 +93,13 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">5</td>
 <td style="width: 14%">November 17</td>
-<td>Channel Capacity and Isoperimetric inequality [<a href="Slides/Lesson5_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson5_h.pdf" target="_blank">PO</a>] </td>
+<td>Channel Capacity and Isoperimetric inequality [<a href="Printouts/Lesson5_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">November 24</td>
-<td>Counting [<a href="Slides/Lesson6_s.pdf" target="_blank">Slides</a>] 
+<td>Differential entropy  and Counting [<a href="Slides/Lesson6_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
