--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -99,8 +99,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">November 24</td>
-<td>Differential entropy  and Counting [<a href="Slides/Lesson6_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
+<td>Differential entropy (appears in Lecture 3) and Counting [<a href="Printouts/Lesson6_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
