--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -105,8 +105,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">December 1</td>
-<td>Relative Entropy [<a href="Slides/Lesson7_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
+<td>Relative Entropy [<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
