--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -108,17 +108,22 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <td>Relative Entropy [<a href="Printouts/Lesson7_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
-
-
 <tr>
 <td style="width: 7%">8</td>
 <td style="width: 14%">December 8</td>
-<td>Parallel Repetition of Interactive Arguments [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
+<td>Kolmogorov Complexity and Other Entropy Measures [<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">December 15</td>
+<td>Parallel Repetition of Interactive Arguments[<a href="Slides/Lesson9_s.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
+</tr>
+
+<tr>
+<td style="width: 7%">10</td>
+<td style="width: 14%">December 22</td>
 <td>Hardcore Predicates [<a href="Slides/Lesson10_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
 
@@ -126,25 +131,17 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 </tr>
 
 <tr>
-<td style="width: 7%">10</td>
-<td style="width: 14%">December 22</td>
+<td style="width: 7%">11</td>
+<td style="width: 14%">December&nbsp; 29</td>
 <td>Psuedo Entropy and Pseudorandom Generators [<a href="Slides/Lesson11_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
-<td style="width: 7%">11</td>
-<td style="width: 14%">December&nbsp; 29</td>
+<td style="width: 7%">12</td>
+<td style="width: 14%">January&nbsp; 5</td>
 <td>Accessible Entropy and Statistically Hiding Commitments [<a href="Slides/Lesson12_s.pdf" target="_blank">Slides</a>] 
 [<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
-</tr>
-
-
-<tr>
-<td style="width: 7%">8</td>
-<td style="width: 14%">January&nbsp; 5</td>
-<td>Kolmogorov Complexity and Other Entropy Measures [<a href="Slides/Lesson8_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson8_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 	<tr>
@@ -153,10 +150,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <td class="auto-style3">No Class <a href="http://www.cs.tau.ac.il/conferences/tcc2016/index.html" target="_blank">TCC in TAU</a></td>
 </tr>
 
-</tr>
-
-
-
+	</tr>
 
 <tr>
 <td style="width: 7%">&nbsp;</td>
