--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -117,7 +117,7 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">December 15</td>
-<td>Parallel Repetition of Interactive Arguments[<a href="Slides/Lesson9_s.pdf" target="_blank">Slides</a>] 
+<td>Parallel Repetition of Interactive Arguments
 [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
