--- a/Courses/Info/Fall15/schedule.html
+++ b/Courses/Info/Fall15/schedule.html
@@ -117,15 +117,13 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">December 15</td>
-<td>Parallel Repetition of Interactive Arguments
-[<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
+<td>Parallel Repetition of Interactive Arguments [<a href="Printouts/Lesson9_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">December 22</td>
-<td>Hardcore Predicates [<a href="Slides/Lesson10_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
+<td>Hardcore Predicates [<a href="Printouts/Lesson10_h.pdf" target="_blank">PO</a>] </td>
 
 &nbsp;</td>
 </tr>
@@ -133,15 +131,13 @@ Basic Definitions and Facts [<a href="Printouts/Lesson1_h.pdf" target="_blank">P
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">December&nbsp; 29</td>
-<td>Psuedo Entropy and Pseudorandom Generators [<a href="Slides/Lesson11_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
+<td>Psuedo Entropy and Pseudorandom Generators [<a href="Printouts/Lesson11_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 <tr>
 <td style="width: 7%">12</td>
 <td style="width: 14%">January&nbsp; 5</td>
-<td>Accessible Entropy and Statistically Hiding Commitments [<a href="Slides/Lesson12_s.pdf" target="_blank">Slides</a>] 
-[<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
+<td>Accessible Entropy and Statistically Hiding Commitments [<a href="Printouts/Lesson12_h.pdf" target="_blank">PO</a>] </td>
 </tr>
 
 	<tr>
