--- a/Courses/Info/Fall15/sets.html
+++ b/Courses/Info/Fall15/sets.html
@@ -29,6 +29,9 @@
 		 <li><a href="ProblemSets/PS3.pdf">Problem set 3</a>. Due date December 8.</li>
 		 
 		  <li><a href="ProblemSets/PS4.pdf">Problem set 4</a>. Due date December 22.</li>
+		  
+		  <li><a href="ProblemSets/PS5.pdf">Problem set 5</a>. Due date January 12.</li>
+		  
 		 
 	 </ol>
 
