--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@ The prizes are given for outstanding papers published in SIAM journals during th
 
 <b>Program Committees</b><br>
 <ul>
+
+<li> <a href="http://www.easyconferences.eu/icalp2016">ICALP 2016  (Track A)</a></li>
+
  <li> <a href="http://www.iacr.org/workshops/tcc2014/">Theory of  Cryptography Conference (TCC) 2014</a></li>
 <li> <a href="http://www.iacr.org/conferences/crypto2013/">CRYPTO 2013</a></li>
 <li> <a href="http://computationalcomplexity.org/Archive/2013/cfp.html">Conference on Computational Complexity (CCC) 2013</a></li>
@@ -244,8 +247,12 @@ The prizes are given for outstanding papers published in SIAM journals during th
 </ul>
 <b>Seminars   and Workshops </b>
 <UL>
- <li>Co-organizer  of the <a href="http://www.cs.tau.ac.il/cseminar/">Greater Tel Aviv Area Cryptography Seminar (GTACS)</a></li>
+<li>Co-organizer of the <a href="https://desertcrypt2015.workshop.org.il/">Second Desert Workshop in Cryptography 2016</a></li>
+
 <li>Co-organizer of the <a href="http://intractability2013.workshop.org.il/">Modeling  Intractability workshop 2013</a></li>
+
+ <li>Co-organizer  of the <a href="http://www.cs.tau.ac.il/cseminar/">Greater Tel Aviv Area Cryptography Seminar (GTACS)</a></li>
+
 </UL>
 <b>Teaching</b> (outside of TelAviv university)
 <ul>
