--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ d.addEventListener ? d.addEventListener("click",_gaLt,!1) : d.attachEvent && d.a
   <div id=topwrap style="padding-left : 40px">
 <h1>Iftach Haitner - <span style="font-size : 125%"> יפתח הייטנר</span> </h1>
 <div   alt="" class="backup shadow2" id="iftach_pic"></div>
-<p style="font-size : 110%"> I am a faculty member at the <a href="https://exact-sciences.tau.ac.il/computer-h">School of Computer Science</a>
+<p style="font-size : 110%"> I am a faculty member at the <a href="http://www.cs.tau.ac.il">School of Computer Science</a>
 at <a href="http://www.tau.ac.il">Tel Aviv University</a>.
 I am a member at the <a href="http://www.icore-algo.org.il/">Israeli
 Center of Research Excellence in Algorithms (ICORE)</a> and the <a href="http://cpiis.cs.tau.ac.il/">Check Point Institute for
